--- a/force-app/main/default/lwc/serviceRequestResignationForm/serviceRequestResignationForm.css
+++ b/force-app/main/default/lwc/serviceRequestResignationForm/serviceRequestResignationForm.css
@@ -1,15 +1,18 @@
 .slds-modal__container {
-    max-width: 90rem !important;
-    width: 150% !important;
+    max-width: 50rem !important;
+    width: 100% !important;
 }
 
 /* Create two equal columns that floats next to each other */
 .column {
   float: left;
   width: 50%;
-  padding: 10px;
-  height: 300px; /* Should be removed. Only for demonstration */
-  border-right: 2px solid #ccc; /* Add a border on the right side of the column */
+  padding: 5px;
+ height: 300px; /* Should be removed. Only for demonstration */
+  border-right: 2px; /*solid #ccc; /* Add a border on the right side of the column */
+ /* margin-right: 01px;
+  margin-left: 01px;*/
+
 }
 
 /* Clear floats after the columns */
