--- a/force-app/main/default/lwc/assignMutipleResources/assignMutipleResources.css
+++ b/force-app/main/default/lwc/assignMutipleResources/assignMutipleResources.css
@@ -1,5 +1,7 @@
 .slds-modal__container{
     width: 90% !important;
     max-width: 90% !important;
+    height: 90% !important;
+     max-height: 90% !important;
     
 }
