--- a/force-app/main/default/aura/assignMultipleAssignMents/assignMultipleAssignMents.css
+++ b/force-app/main/default/aura/assignMultipleAssignMents/assignMultipleAssignMents.css
@@ -1,6 +1,7 @@
 .THIS {
- 
-    width: 80% !important;
-    max-width: 80% !important;
+    width: 90% !important;
+    max-width: 90% !important;
+    max-Height: 90% !important;
+    height:90% !important;
 
 }
