--- a/force-app/main/default/aura/assignMultipleAssignMents/assignMultipleAssignMents.css
+++ b/force-app/main/default/aura/assignMultipleAssignMents/assignMultipleAssignMents.css
@@ -1,7 +1,3 @@
-.THIS {
-    width: 90% !important;
-    max-width: 90% !important;
-    max-Height: 90% !important;
-    height:90% !important;
-
+.THIS .slds-modal__content {
+width:max-content;
 }
